--- a/main/ecomm-rfp.html
+++ b/main/ecomm-rfp.html
@@ -110,10 +110,12 @@
 
 
 <body>
+
+
   <main>
     <section>
       <div class="container rfp-wrapper">
-        <div class="sider">
+        <div class="sider rfp-wrapper">
           <a href="https://chrisconnelly.dev"><img src="assets/media/img/logo/ccdd.svg" alt="chrisconnellydotdev logo"
               height="50" /></a>
         </div>
