--- a/main/pkg-rfp.html
+++ b/main/pkg-rfp.html
@@ -110,19 +110,20 @@
 
 
 <body>
+
+
   <main>
-    <header class="form-header">
-      <div class="logo">
-        <img src="assets/media/img/logo/ccdd.svg" height="199" />
+    <section>
+      <div class="container rfp-wrapper">
+        <div class="sider rfp-wrapper">
+          <a href="https://chrisconnelly.dev"><img src="assets/media/img/logo/ccdd.svg" alt="chrisconnellydotdev logo"
+              height="50" /></a>
+        </div>
+        <iframe width="600" height="850"
+          src="https://portal.chrisconnelly.ca/forms/quote/1090cd1a6f52de24194cd9aafe2216a3" frameborder="0"
+          sandbox="allow-top-navigation allow-scripts allow-forms allow-same-origin" allowfullscreen></iframe>
       </div>
-
-    </header>
-    <div class="container rfp-wrapper">
-      <iframe width="600" height="850"
-        src="https://portal.chrisconnelly.ca/forms/quote/1090cd1a6f52de24194cd9aafe2216a3" frameborder="0"
-        sandbox="allow-top-navigation allow-scripts allow-forms allow-same-origin" allowfullscreen></iframe>
-    </div>
-
+    </section>
   </main>
 </body>
 
