--- a/public/crm.html
+++ b/public/crm.html
@@ -339,17 +339,8 @@
                                 href="https://portal.chrisconnelly.ca" target="_blank" rel="noreferrer"
                                 class="header-v2__nav-link">Customer Log
                                 in</a></li>
-                        <li class="header-v2__nav-item header-v2__nav-item--main"><a
-                                href="/rfp.html?option=com_jumi&amp;fileid=3&amp;Itemid=11" onclick="window.open(this.href,'targetWindow',
-                                                  `toolbar=no,
-                                                   location=no,
-                                                   status=no,
-                                                   menubar=no,
-                                                   scrollbars=yes,
-                                                   resizable=yes,
-                                                   width=900,
-                                                   height=800`);
-                return false;" class=" btn btn--primary">Get
+                        <li class="header-v2__nav-item header-v2__nav-item--main"><a href="/rfp"
+                                class=" btn btn--primary">Get
                                 A
                                 Free
                                 Quote</a></li>
