--- a/public/index.html
+++ b/public/index.html
@@ -417,11 +417,11 @@
             <li class="header-v2__nav-item header-v2__nav-item--main"><a href="https://portal.chrisconnelly.ca"
                 target="_blank" rel="noreferrer" class="header-v2__nav-link">Customer Log
                 in</a></li>
-            <li class="header-v2__nav-item header-v2__nav-item--main"><button onclick="openWin()"
-                class=" btn btn--primary">Get
-                A
-                Free
-                Quote </button></li>
+            <li class="header-v2__nav-item header-v2__nav-item--main"><a href="/rfp.html"><button onclick="openWin()"
+                  class=" btn btn--primary">Get
+                  A
+                  Free
+                  Quote </button></a></li>
             <li class="header-v2__nav-item header-v2__nav-item--main header-v2__nav-item--search-btn">
               <button class="reset js-tab-focus" aria-label="Toggle search" aria-controls="modal-search">
                 <svg class="icon" aria-hidden="true" viewBox="0 0 16 16">
