--- a/public/rfp.html
+++ b/public/rfp.html
@@ -115,7 +115,7 @@
   <main>
     <section>
       <div class="container rfp-wrapper">
-        <div class="sider">
+        <div class="sider rfp-wrapper">
           <a href="https://chrisconnelly.dev"><img src="assets/media/img/logo/ccdd.svg" alt="chrisconnellydotdev logo"
               height="50" /></a>
         </div>
